# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

licenses(["notice"])  # Apache 2.0

load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_cc//cc:defs.bzl", "cc_proto_library")
# load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")

cc_proto_library(
    name = "impact_proto_cc_proto",
    deps = [":impact_proto"],
)

cc_proto_library(
    name = "config_change_cc_proto",
    deps = [":config_change_proto"],
)


proto_library(
    name = "config_change_proto",
    srcs = ["config_change.proto"],
)

proto_library(
	visibility = ["//visibility:public"],
    name = "impact_proto",
    srcs = ["impact_analysis_response.proto"],
    deps = [
        "@com_google_protobuf//:timestamp_proto",
        "config_change_proto"
    ],
)