# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

licenses(["notice"])  # Apache 2.0

load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_proto_library")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")

cc_library(
  name = "subscriber-lib",
  srcs = ["client.cc", "mock_message.cc", "proto/config_change.pb.cc", "proto/impact_analysis_response.pb.cc", "publisher.cc"],
  hdrs = ["client.h", "processor.h", "publisher.h", "mock_message.h", "proto/config_change.pb.h", "proto/impact_analysis_response.pb.h"],
  deps = [
    "@com_github_grpc_grpc//:grpc++",
    "@com_google_googleapis//google/pubsub/v1:pubsub_cc_grpc",
	"@com_google_absl//absl/strings",
	# "@proto_files//:config_change_cc_proto",
	# ":config_type_cc_proto",
  ],
)

# command to run test on Mac os
# bazel test --copt -DGRPC_BAZEL_BUILD :unit_test
cc_test(
  name = "unit_test",
  srcs = [
      "processor_tests.cc",
  ],
  deps = [
    "@googletest//:gtest_main",
    ":subscriber-lib",
  ],
)

cc_binary(
  name = "main",
  srcs = [
    "main.cc",
  ],
  deps = [
    ":subscriber-lib",
  ],
)