# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

licenses(["notice"])  # Apache 2.0

load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_proto_library")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")

cc_library(
  name = "subscriber-lib",
  srcs = [
    "spanner_handler.cc",
    "simulation.cc",
    "client.cc", "mock_message.cc", "proto/config_change.pb.cc", "proto/impact_analysis_response.pb.cc", "publisher.cc"],
  hdrs = [
    "signal.h",
    "reviewer.h",
    "simulation.h",
    "simulation_output.h",
    "models/EnqueueRule.h",
    "models/EnqueueSignal.h",
    "models/Queue.h",
    "models/RoutingSignal.h",
    "models/VerdictSignal.h",
    "models/Video.h",
    "spanner_handler.h",
    "impact.h",
    "client.h", "processor.h", "publisher.h", "mock_message.h", "proto/config_change.pb.h", "proto/impact_analysis_response.pb.h"],

  deps = [
    "@com_github_grpc_grpc//:grpc++",
    "@com_google_googleapis//google/pubsub/v1:pubsub_cc_grpc",
    "@com_github_googleapis_google_cloud_cpp//:spanner_client",
	  "@com_google_absl//absl/strings",
  ],
)

# command to run test on Mac os
# bazel test --copt -DGRPC_BAZEL_BUILD :unit_test
cc_test(
  name = "unit_test",
  srcs = [
      "processor_tests.cc",
  ],
  deps = [
    "@googletest//:gtest_main",
    ":subscriber-lib",
  ],
)

cc_proto_library(
    name = "impact_proto_cc_proto",
    deps = [":impact_proto"],
)

cc_proto_library(
    name = "config_change_cc_proto",
    deps = [":config_change_proto"],
)


proto_library(
  visibility = ["//visibility:public"],
  name = "config_change_proto",
  srcs = ["proto/config_change.proto"],
)

proto_library(
	visibility = ["//visibility:public"],
    name = "impact_proto",
    srcs = ["proto/impact_analysis_response.proto"],
    deps = [
        "@com_google_protobuf//:timestamp_proto",
        "config_change_proto"
    ],
)

cc_binary(
  name = "main",
  srcs = [
    "main.cc",
  ],
  deps = [
    ":subscriber-lib",
  ],
)