# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

licenses(["notice"])  # Apache 2.0

load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_python//python:defs.bzl", "py_binary")
load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")


py_proto_library(
	visibility = ["//visibility:public"],
    name = "impact_proto_py",
    srcs = ["impact_analysis_response.proto",],
    deps = [
		"@com_google_protobuf//:protobuf_python",
		":config_proto_py"
	],
)

py_proto_library(
	visibility = ["//visibility:public"],
    name = "config_proto_py",
    srcs = ["config_change.proto"],
    deps = ["@com_google_protobuf//:protobuf_python"],
)

py_binary(
  name = "main",
  srcs = ["main.py"],
  deps =[
	  "impact_proto_py"
  ]
)

